<resources>
    <string name="app_name">Ixirus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_development_plan">My Development Plan</string>
    <string name="menu_my_tasks">My Tasks</string>
    <string name="menu_feedbacks">FeedBacks</string>
    <string name="menu_my_assignments">My Assignments</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_xperince_sharing">Xperience Sharing</string>
    <string name="menu_dev_sources">Resources</string>
    <string name="menu_create_dev_plan">Create Dev Plan</string>

    <string name="choose_programm">CHOOSE PROGRAMME</string>
    <string name="write_new_programm_hint">Write New Programme</string>
    <string name="dev_plan_name">DEV PlAN NAME</string>
    <string name="dev_plan_name_hint">Please Type Dev Plan Name</string>
    <string name="new_perfection_hint">Add New Perfection </string>
    <string name="choose_perfection">CHOOSE PERFECTION</string>

    <string name="menu_my_peers">My Peers</string>
    <string name="menu_quizes">My Quizes</string>
    <string name="menu_coaching">Coaching/Mentoring</string>
    <string name="menu_ixirus_big">IXIRUS</string>
    <string name="button_text">Next</string>
    <string name="name_hint">Name</string>
    <string name="surname_hint">Surname</string>
    <string name="company_code_hint">Company Code</string>

    <string name="user_name_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">REGISTER</string>
    <string name="welcome">Welcome to Ixirus</string>
    <string name="or_login_with">OR "\n" login with </string>
    <string name="choose_behaviour">CHOOSE BEHAVIOUR</string>
    <string name="add_new_behaviour">Add New Behaviour</string>
    <string name="successfully_added">Successfully Added!</string>
    <string name="retry_add">Plase Try Again!</string>
    <string name="select_source">Please Select Source!</string>
    <string name="select_date">Please Select Date!</string>
    <string name="type_name">Please Type Name!</string>
    <string name="select_item">Please Select Item!</string>
    <string name="answer_the_questions">Please Answer All Questions</string>
    <string name="add_action_step">Please Add Action Step</string>
    <string name="add_source_step">Please Add Source</string>

    <string name="type_plan_name">Please Type a Plan Name</string>
    <string name="plan_saved_successfully">Successfully Added to Your Development Plans</string>
    <string name="plan_updated_successfully">Successfully Updated Your Development Plan</string>

    <string name="source_list">Source List</string>
    <string name="are_you_sure">Are you sure?</string>

    <string name="type_expect">Type the benefits what you expect from this program</string>
    <string name="click_list_ico">Data Feed Error! Click to Refresh</string>
    <string name="question_1">I have all kinds of information.</string>
    <string name="question_2">I\'m in a good position to apply.</string>
    <string name="question_3">I believe that it is necessary, that it will benefit me, that i need to improve.</string>
    <string name="question_4">I trust myself to exhibit.</string>
    <string name="question_5">I want to develop and exhibit.</string>
    <string name="answer_1">I totally agree</string>
    <string name="answer_2">I agree</string>
    <string name="answer_3">I do not agree</string>
    <string name="action_steps">Action Steps</string>
    <string name="add_new_action">Add New Action</string>
    <string name="date_define">Set Date</string>
    <string name="selected_sources">Selected Sources</string>
    <string name="add_new_source">Add New Resource</string>
    <string name="add">Add</string>
    <string name="pdf_document_title">Resource 1 - Pdf Document</string>
    <string name="pdf_document_text">It is recommended that you read carefully the information we will give you in the pdf document.</string>
    <string name="video_document_title">Resource 2 - Video Document</string>
    <string name="video_document_text">You can add video document here.</string>
    <string name="image_document_title">Resource 3 - Image Document</string>
    <string name="image_document_text">You can add image document here.</string>
    <string name="music_document_title">Resource 4 - audio document</string>
    <string name="music_document_text">You can add audio document here</string>
    <string name="login_error_toast">Invalid Email or Password</string>
    <string name="save">Save</string>
    <string name="let_educator"> Let my instructor follow my development plan</string>
    <string name="let_manager"> Let my manager follow my development plan</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="audio_document">Audio Document</string>
    <string name="video_document">Video Document</string>
    <string name="image_document">Image Document</string>
    <string name="pdf_document">Pdf Document</string>
    <string name="all_document">All Resources</string>
    <string name="my_devplans">My DevPlans</string>
    <string name="add_new">Add New</string>
    <string name="sign_up_error">All Fields Are Required!</string>
    <string name="dev_plan">Dev Plan</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="waiting_actions">WAITING ACTIONS</string>
    <string name="completed_actions">COMPLETED ACTIONS</string>
    <string name="action_step_delete">Remove Action</string>
    <string name="source_step_delete">Remove Source</string>
    <string name="behaviour_based">Perfection Based</string>
    <string name="all_sources">All Sources</string>
    <string name="preview">Preview</string>
    <string name="choose_source">Select Source</string>
    <string name="main_question">What performance barriers do you need to overcome for the behavior you intend to improve?</string>
    <string name="questions">QUESTIONS</string>
    <string name="plase_answer_questions">Please answer the questions below.</string>
    <string name="check_answers">Please check your answers to the test questions. In The next steps, you will add action steps depending on this answers.</string>
    <string name="menu_dev_preview">Preview</string>
    <string name="preview_dev_plan_name">DEVELOPMENT PLAN NAME</string>
    <string name="preview_programme">SELECTED PROGRAMME</string>
    <string name="preview_perfection">SELECTED PERFECTION</string>
    <string name="preview_behaviour">SELECTED BEHAVIOUR</string>
    <string name="preview_benefits">EXPECTED BENEFITS</string>
    <string name="preview_quiz">QUIZ</string>
    <string name="selected_helpful_sources">SELECTED HELPFUL SOURCES</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="summary">Summary</string>
    <string name="view">View</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="mark_completed">Mark Completed</string>
    <string name="mark_uncompleted">Mark uncompleted</string>
    <string name="rate">Rate</string>
    <string name="experience_sharing">Experience Sharing</string>
    <string name="ask_feedBack">Ask Feedback</string>
    <string name="show_feedbacks">Show Feedbacks</string>
    <string name="feedback_request_sent">Your feedback request has been sent!</string>
    <string name="person_feedback">Person you want feedback from:</string>
    <string name="message">Message</string>
    <string name="feedbacks">Feedbacks</string>
    <string name="notifications">Notifications</string>
    <string name="rate1">How do you evaluate your performance in your current behavior?</string>
    <string name="rate2">Interpret your change compared to your first assessment</string>
    <string name="type_here">Type Here…</string>
    <string name="rating_added">Your rate has been added!</string>
    <string name="menu_behavior_style">Behavior Style</string>
    <string name="complete">Complete</string>
    <string name="proper_behavior">Please select the most proper behavior style below</string>
    <string name="disc_result">DISC Result</string>
    <string name="disc_result_shown_below">Your behaviour style is shown below:</string>
    <string name="agree">I agree</string>
    <string name="disagree">I disagree</string>
    <string name="other_colors">Other Colors</string>
    <string name="invite_others">INVITE OTHERS</string>
    <string name="retake_quiz">RE-TAKE THE QUIZ</string>
    <string name="invite">Invite anyone you suggest to know about the behavior style.</string>
    <string name="retake">You can take the quiz again if you think that the quiz results does not suit you.</string>
    <string name="quiz_confirmation">Quiz Confirmation</string>
    <string name="quiz_confirmation_text">Quiz has resulted different than the last. Do you confirm the result change below?</string>
    <string name="confirm">Confirm</string>

    <string name="network_error">Cannot connect to Internet…Please check your connection!</string>
    <string name="server_error">Server error occurred!</string>
    <string name="auth_failure_error">Cannot connect to Internet…Please check your connection!</string>
    <string name="parse_error">Parse Error!</string>
    <string name="no_connection_error">Cannot connect to Internet…Please check your connection!</string>
    <string name="timeout_error">Connection TimeOut! Please check your internet connection.</string>
    <string name="clear_selection">Clear Selection</string>
    <string name="fcm_message">Ixirus</string>
    <string name="default_notification_channel_id">IxirusChannel</string>
    <string name="person_invite">Person who you want to invite:</string>
    <string name="person_email">Email address of this person:</string>
    <string name="send_invitation">Send Invitation</string>
    <string name="invite_request_sent">Your invite request has been sent!</string>
    <string name="settings">Settings</string>
    <string name="reset_pass">Reset password</string>
    <string name="gdpr">Gdpr</string>
    <string name="logout">Logout</string>
    <string name="forgot_pass_title">Operation successful</string>
    <string name="forgot_pass_body">Password change request has been received. Please follow instructions on the e-mail we sent.</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="login_credentials">Registration Successful! You can login with your credentials</string>
    <string name="our_gdpr">You are agreeing with our GDPR by registering</string>
    <string name="disc_questions_text">Select the option you think that describes you the best in each group</string>


</resources>
