<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="280dp"
    android:orientation="horizontal"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/text8"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"

        android:text="@string/music_document_text"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/text4"
        app:layout_constraintWidth_percent="0.8" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toStartOf="@+id/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.2"
        app:srcCompat="@drawable/pdf_icon" />

    <TextView
        android:id="@+id/text"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/pdf_document_title"

        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView3"
        />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toStartOf="@+id/text2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView3"
        app:layout_constraintWidth_percent="0.2"
        app:srcCompat="@drawable/video_icon" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/video_document_title"

        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/text5"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"

        android:text="@string/pdf_document_text"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/imageView3"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintWidth_percent="0.8" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView4"
        />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toStartOf="@+id/text2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView4"
        app:layout_constraintWidth_percent="0.2"
        app:srcCompat="@drawable/image_icon" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"

        android:text="@string/image_document_title"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/text6"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/text6"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/video_document_text"

        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/text2"
        app:layout_constraintWidth_percent="0.8" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView5"
        />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toStartOf="@+id/text2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView5"
        app:layout_constraintWidth_percent="0.2"
        app:srcCompat="@drawable/music_icon" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/music_document_title"

        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/text7"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/text7"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"

        android:text="@string/image_document_text"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/text3"
        app:layout_constraintWidth_percent="0.8" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView6"
        />


</androidx.constraintlayout.widget.ConstraintLayout>

